@@ -245,6 +245,17 @@
 					</select></td>
 				</tr>
 			</table>
+			<br>
+			<h2>P1 Smart Meter Type:</h2>
+			<table class="display" id="p1metertable" border="0" cellpadding="0" cellspacing="0">
+				<tr>
+					<td align="right" style="width:60px"><label>Type: </label></td>
+					<td><select id="comboP1MeterType" name="SmartMeterType" style="width:120px" class="combobox ui-corner-all">
+						<option value="0">With Decimals</option>
+						<option value="1">No Decimals</option>
+					</select></td>
+				</tr>
+			</table>
 		</section>
 
 		<!-- Other Settings
@@ -483,6 +494,9 @@ function ShowSettings()
       }
       if (typeof data.DoorbellCommand != 'undefined') {
         $("#doorbelltable #comboDoorbellCommand").val(data.DoorbellCommand);
+      }
+      if (typeof data.SmartMeterType != 'undefined') {
+        $("#p1metertable #comboP1MeterType").val(data.SmartMeterType);
       }
      }
   });
